// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBarAuth logged in should render the NavBarAuth Component correctly 1`] = `
<header
  className="d-flex flex-column p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm"
>
  <nav
    className="navbar navbar-light bg-light justify-content-between"
  >
    <a
      className="navbar-brand"
    >
      Task Manager
    </a>
    <span
      className="navbar-text "
    >
      <span
        className="mr-2"
      >
        <Link
          to="/"
        >
           Main page
        </Link>
      </span>
      <span
        className="mr-2"
      >
        <Link
          to="/"
        >
           Log Out
        </Link>
      </span>
      <Link
        to="/signup"
      >
        Sign Up
      </Link>
    </span>
  </nav>
</header>
`;

exports[`NavBarAuth not logged in should render the NavBarAuth Component correctly 1`] = `
<header
  className="d-flex flex-column p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm"
>
  <nav
    className="navbar navbar-light bg-light justify-content-between"
  >
    <a
      className="navbar-brand"
    >
      Task Manager
    </a>
    <span
      className="navbar-text "
    >
      <span
        className="mr-2"
      >
        <Link
          to="/"
        >
           Main page
        </Link>
      </span>
      <span
        className="mr-2"
      >
        <Link
          to="/login"
        >
           Log In
        </Link>
      </span>
      <Link
        to="/signup"
      >
        Sign Up
      </Link>
    </span>
  </nav>
</header>
`;
